--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "4.18.2",
     "mongoose": "7.8.7",
     "cors": "2.8.5",
-    "dotenv": "16.0.3"
+    "dotenv": "16.0.3",
+    "axios": "1.6.7"
   },
   "devDependencies": {
     "nodemon": "2.0.22"
