Update build configuration and Node.js version

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "npm install"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": "18.x"
   },
   "keywords": [],
   "author": "",
