--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mongoose": "7.8.7",
     "cors": "2.8.5",
     "dotenv": "16.0.3",
-    "axios": "1.6.7"
+    "axios": "1.6.7",
+    "cheerio": "1.0.0-rc.12"
   },
   "devDependencies": {
     "nodemon": "2.0.22"
